@@ -7,6 +7,9 @@
 
 <ul>
 
+	<li>The mxmldoc program now supports --title and --intro
+	options.</li>
+
 	<li>The mxmlLoad*() functions could leak a node on an
 	error (STR #27)</li>
 
